Fix #780: Restrict width overflow of dashboard widget content

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -5241,6 +5241,9 @@ form[name="notification_settings"] .select2-choice {
 /******************************************* 
 ************* Dashboard Styles *************
 ********************************************/
+li.dashboardWidget {
+	overflow: auto;
+}
 
 .dashboardWidgetHeader .title{
     padding-bottom: 10px;
